--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
-    "@auth0/nextjs-auth0": "^1.3.1",
+    "@auth0/nextjs-auth0": "^1.4.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
-    "gql": "^1.1.2",
-    "graphql": "^15.5.0",
+    "gql": "latest",
+    "graphql": "latest",
     "next": "latest",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.1.1"
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "typescript": "^4.3.2"
   }
 }
