--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
-    "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.3.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
-    "@urql/exchange-graphcache": "^4.1.3",
-    "emotion-theming": "^11.0.0",
     "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
@@ -33,14 +29,13 @@
     "react-is": "^17.0.2",
     "styled-jsx": "^3.4.4",
     "urql": "^2.0.3",
-    "vercel": "latest"
+    "vercel": "^23.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.5",
     "@graphql-codegen/typescript": "^1.22.1",
     "@graphql-codegen/typescript-operations": "^1.18.0",
     "@graphql-codegen/typescript-react-apollo": "^2.2.5",
-    "@graphql-codegen/typescript-urql": "^2.0.7",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "autoprefixer": "latest",
