yarn build error

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "next": "latest",
     "next-themes": "latest",
     "react": "latest",
-    "react-datepicker": "^4.1.1",
+    "react-datepicker": "latest",
     "react-dom": "latest",
     "react-hook-form": "latest",
     "tailwindcss-invalid-variant-plugin": "latest",
