fix: updateEvent bug, feat: event venue inputt, trending events and upcoming events

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "latest",
     "@tailwindcss/aspect-ratio": "latest",
     "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
     "@tailwindcss/typography": "latest",
     "graphql": "latest",
     "next": "latest",
