refactor: relay client

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "baseUrl": "./src"
   },
-  "include": ["next-env.d.ts", "next.config.js", "src", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "src", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
