--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate:relay": "relay-compiler"
+    "relay": "relay-compiler"
   },
   "dependencies": {
     "@apollo/client": "latest",
