--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,14 @@
 overwrite: true
-schema: "https://api.givehub.club/graphql"
-documents: "src/**/*.graphql"
+schema: 'https://api.givehub.club/graphql'
+documents: 'src/**/*.graphql'
 generates:
   src/generated/graphql.tsx:
     plugins:
-      - "typescript"
-      - "typescript-operations"
-      - "typescript-react-apollo"
+      - 'typescript'
+      - 'typescript-operations'
+      - 'typescript-react-apollo'
+watch: true
+# Passed directly through to chokidar's file watch configuration
+watchConfig:
+  usePolling: true
+  interval: 1000
