--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "next": "latest",
     "next-themes": "latest",
     "react": "latest",
-    "react-datepicker": "latest",
+    "react-datepicker": "^4.1.1",
     "react-dom": "latest",
     "react-hook-form": "latest",
+    "reactdatepicker": "^2.2.0",
     "tailwindcss-invalid-variant-plugin": "latest",
     "yup": "latest"
   },
@@ -37,6 +38,7 @@
     "@graphql-codegen/typescript-react-apollo": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
+    "@types/react-datepicker": "^4.1.3",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
