--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@apollo/client": "latest",
+    "@cloudinary/base": "^1.0.0-beta.3",
+    "@cloudinary/react": "^1.0.0-beta.8",
     "@headlessui/react": "latest",
     "@heroicons/react": "latest",
     "@hookform/resolvers": "latest",
@@ -19,16 +21,16 @@
     "@tailwindcss/forms": "latest",
     "@tailwindcss/line-clamp": "latest",
     "@tailwindcss/typography": "latest",
+    "axios": "latest",
+    "cloudinary-react": "^1.7.0",
     "graphql": "latest",
     "graphql-anywhere": "latest",
     "next": "latest",
     "next-themes": "latest",
     "react": "latest",
-    "react-datepicker": "^4.1.1",
+    "react-datepicker": "latest",
     "react-dom": "latest",
     "react-hook-form": "latest",
-    "reactdatepicker": "^2.2.0",
-    "tailwindcss-invalid-variant-plugin": "latest",
     "yup": "latest"
   },
   "devDependencies": {
@@ -39,12 +41,12 @@
     "@graphql-codegen/typescript-react-apollo": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
-    "@types/react-datepicker": "^4.1.3",
+    "@types/react-datepicker": "latest",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "latest",
-    "husky": "^7.0.1",
+    "husky": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
