feat: update user profile

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@apollo/client": "latest",
-    "@cloudinary/base": "^1.0.0-beta.3",
-    "@cloudinary/react": "^1.0.0-beta.8",
+    "@cloudinary/base": "latest",
+    "@cloudinary/react": "latest",
     "@headlessui/react": "latest",
     "@heroicons/react": "latest",
     "@hookform/resolvers": "latest",
@@ -22,8 +22,8 @@
     "@tailwindcss/line-clamp": "latest",
     "@tailwindcss/typography": "latest",
     "axios": "latest",
-    "cloudinary-react": "^1.7.0",
-    "date-fns": "^2.23.0",
+    "cloudinary-react": "latest",
+    "date-fns": "latest",
     "graphql": "latest",
     "graphql-anywhere": "latest",
     "next": "latest",
